fix team cards on mobile

--- a/css/page.css
+++ b/css/page.css
@@ -150,6 +150,10 @@
 	margin-top: -50px;
 }
 
+#team .ui.card {
+	width: 100%;
+}
+
 /* Media Queries */
 @media screen and (max-width: 1024px) {
   .header-img {
